--- a/primer-sdk-android/src/main/res/layout/payment_method_item.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_item.xml
@@ -18,7 +18,7 @@
         android:layout_marginBottom="@dimen/medium_large_padding"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
-        android:textIsSelectable="true"
+        android:textIsSelectable="false"
         android:textSize="@dimen/primer_text_size_sm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/payment_method_icon"
