--- a/primer-sdk-android/src/main/res/values/styles.xml
+++ b/primer-sdk-android/src/main/res/values/styles.xml
@@ -39,6 +39,21 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="Primer.AlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:background">@android:color/white</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
+        <item name="android:buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+    </style>
+
+    <style name="NegativeButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/primer_app_primary</item>
+    </style>
+
+    <style name="PositiveButtonStyle" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog">
+        <item name="android:textColor">@color/primer_android_red</item>
+    </style>
+
     <style name="Primer.Button" />
 
     <style name="Primer.Button.Text">
