--- a/primer-sdk-android/src/main/res/xml/fragment_select_payment_method_scene.xml
+++ b/primer-sdk-android/src/main/res/xml/fragment_select_payment_method_scene.xml
@@ -8,55 +8,61 @@
         app:duration="500" />
 
     <ConstraintSet android:id="@+id/start">
-
+        <Constraint
+            android:id="@+id/choose_payment_method_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@+id/primer_sheet_title_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            android:id="@+id/primer_sheet_title_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@id/saved_payment_method_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            android:id="@+id/saved_payment_method_label"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/medium_vertical_margin"
+            android:layout_marginEnd="@dimen/small_padding"
+            app:layout_constraintBottom_toTopOf="@+id/saved_payment_method"
+            app:layout_constraintEnd_toStartOf="@id/see_all_label"
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
+            android:id="@+id/see_all_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_vertical_margin"
+            app:layout_constraintBaseline_toBaselineOf="@id/saved_payment_method_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/saved_payment_method_label" />
         <Constraint
             android:id="@+id/payAllButton"
             android:layout_height="36dp"
             app:layout_constraintBottom_toBottomOf="@id/saved_payment_method"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
-
-        <Constraint
-            android:id="@+id/primer_sheet_title_layout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_vertical_margin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/choose_payment_method_label" />
-        <Constraint
-            android:id="@+id/saved_payment_method_label"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/medium_vertical_margin"
-            android:layout_marginEnd="@dimen/small_padding"
-            app:layout_constraintEnd_toStartOf="@id/see_all_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout" />
-        <Constraint
-            android:id="@+id/see_all_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/large_vertical_margin"
-            app:layout_constraintBaseline_toBaselineOf="@id/saved_payment_method_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/saved_payment_method_label" />
         <Constraint
             android:id="@+id/saved_payment_method"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@+id/other_ways_to_pay_label"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/saved_payment_method_label" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/other_ways_to_pay_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@+id/primer_sheet_payment_methods_list"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/payAllButton" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/primer_sheet_payment_methods_list"
             android:layout_width="match_parent"
@@ -64,42 +70,35 @@
             android:layout_marginTop="@dimen/medium_vertical_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/other_ways_to_pay_label" />
+            app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@id/payAllButton"
-            android:layout_height="36dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/saved_payment_method" />
-
-        <Constraint
             android:id="@+id/choose_payment_method_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@+id/primer_sheet_title_layout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/primer_sheet_title_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/large_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@id/saved_payment_method_label"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/choose_payment_method_label" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/saved_payment_method_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
             android:layout_marginEnd="@dimen/small_padding"
+            app:layout_constraintBottom_toTopOf="@+id/saved_payment_method"
             app:layout_constraintEnd_toStartOf="@id/see_all_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/see_all_label"
             android:layout_width="wrap_content"
@@ -109,31 +108,36 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/saved_payment_method_label" />
         <Constraint
+            android:id="@+id/payAllButton"
+            android:layout_height="36dp"
+            app:layout_constraintTop_toBottomOf="@id/saved_payment_method"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+        <Constraint
             android:id="@+id/saved_payment_method"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
+            app:layout_constraintBottom_toTopOf="@+id/payAllButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/saved_payment_method_label" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/other_ways_to_pay_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@+id/payAllButton"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/payAllButton" />
+            app:layout_constraintStart_toStartOf="parent" />
         <Constraint
             android:id="@+id/primer_sheet_payment_methods_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/medium_vertical_margin"
+            app:layout_constraintTop_toBottomOf="@+id/other_ways_to_pay_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/other_ways_to_pay_label" />
-
+            app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
 </MotionScene>
