--- a/primer-sdk-android/src/main/res/layout/fragment_initializing.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_initializing.xml
@@ -4,9 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+<!--    setting height to better reflect figma -->
     <ProgressBar
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
