--- a/primer-sdk-android/src/main/res/drawable/saved_payment_method_item_underlined.xml
+++ b/primer-sdk-android/src/main/res/drawable/saved_payment_method_item_underlined.xml
@@ -2,12 +2,13 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="@android:color/darker_gray">
     <item>
-        <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+        <layer-list>
             <item>
                 <shape
                     android:shape="rectangle">
-                    <stroke android:width="1dp" android:color="#FFC6C6C8" />
-                    <solid android:color="#FFFFFFFF" />
+                    <stroke android:width="1dp"
+                        android:color="@color/primer_item_background" />
+                    <solid android:color="@color/primer_app_background" />
 
                 </shape>
             </item>
@@ -15,8 +16,8 @@
             <item android:bottom="1dp">
                 <shape
                     android:shape="rectangle">
-                    <stroke android:width="1dp" android:color="#FFFFFFFF" />
-                    <solid android:color="#00000000" />
+                    <stroke android:width="1dp"
+                        android:color="@color/primer_app_background" />
                 </shape>
             </item>
 
