--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -11,8 +11,9 @@
     <color name="primer_app_danger">#FFEB001B</color>
 
     <color name="primer_button_primary">@color/primer_app_primary</color>
-    <color name="primer_button_primary_fg">@android:color/white</color>
-    <color name="primer_button_disabled">#1F000000</color>
+    <color name="primer_button_primary_text_color">@android:color/white</color>
+    <color name="primer_button_primary_disabled_text_color">#5d6269</color>
+    <color name="primer_button_primary_disabled">#1F000000</color>
 
     <color name="paypal_gold">#FFFFC439</color>
     <color name="klarna">#FFB3C7</color>
