--- a/primer-sdk-android/src/debug/res/layout/activity_debug.xml
+++ b/primer-sdk-android/src/debug/res/layout/activity_debug.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp">
+    android:padding="8dp"
+    tools:ignore="HardcodedText">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <Button
@@ -20,5 +22,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Primary.Button.Text" />
+
+        <Button
+            style="@style/Primer.NewButton.Primary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Primary.Button.Text" />
+
+        <io.primer.android.ui.components.PayButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </ScrollView>
