--- a/primer-sdk-android/src/main/res/layout/fragment_success.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_success.xml
@@ -1,21 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
         android:contentDescription="@string/success_icon_description"
-        android:src="@drawable/icon_check_circle" />
+        android:src="@drawable/ic_check_success"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.406" />
 
     <TextView
-        style="@style/Primer.Text.Title"
-        android:layout_width="wrap_content"
+        android:id="@+id/success_message"
+        style="@style/Primer.Text.Title.Small"
+        android:layout_width="@dimen/success_width"
         android:layout_height="wrap_content"
-        android:text="@string/success_text" />
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="@string/success_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
