--- a/primer-sdk-android/src/main/res/layout/payment_method_button_card.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_button_card.xml
@@ -18,6 +18,6 @@
         android:layout_height="@dimen/primer_payment_method_preview_button_height"
         android:drawablePadding="10dp"
         android:gravity="center"
-        android:text="@string/pay_by_card"
+        android:text="@string/credit_debit_card"
         app:drawableStartCompat="@drawable/credit_card_icon" />
 </io.primer.android.ui.components.ButtonDefaultLayout>
