--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -37,4 +37,5 @@
 
     <!-- Pay Button -->
     <dimen name="pay_button_height">40dp</dimen>
+    <dimen name="pay_button_radius">2dp</dimen>
 </resources>
