--- a/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
@@ -39,7 +39,7 @@
         android:id="@+id/saved_payment_method_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_vertical_margin"
+        android:layout_marginTop="@dimen/large_vertical_margin"
         android:layout_marginEnd="@dimen/small_padding"
         android:text="@string/saved_payment_methods"
         android:textColor="@color/primer_text_color_muted"
@@ -51,9 +51,8 @@
         android:id="@+id/see_all_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/large_vertical_margin"
         android:fontFamily="@font/roboto_medium"
-        android:text="@string/see_all"
+        android:text="@string/manage"
         android:textAllCaps="true"
         android:textColor="@color/primer_button_primary"
         app:layout_constraintBaseline_toBaselineOf="@id/saved_payment_method_label"
@@ -74,7 +73,7 @@
         android:id="@+id/payAllButton"
         android:layout_width="0dp"
         android:layout_height="@dimen/pay_button_height"
-        android:layout_marginTop="@dimen/large_vertical_margin"
+        android:layout_marginTop="@dimen/xl_vertical_margin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/saved_payment_method" />
@@ -83,7 +82,7 @@
         android:id="@+id/other_ways_to_pay_label"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/medium_vertical_margin"
+        android:layout_marginTop="@dimen/xxl_vertical_margin"
         android:text="@string/available_payment_methods"
         android:textColor="@color/primer_text_color_muted"
         app:layout_constraintEnd_toEndOf="parent"
