--- a/primer-sdk-android/src/main/res/layout/pay_button.xml
+++ b/primer-sdk-android/src/main/res/layout/pay_button.xml
@@ -12,6 +12,7 @@
         style="@style/Primer.NewButton.Pay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
