--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -5,7 +5,7 @@
 
     <dimen name="primer_corner_radius">6dp</dimen>
     <dimen name="primer_border_width">1dp</dimen>
-    <dimen name="primer_list_margin">13dp</dimen>
+    <dimen name="primer_list_margin">16dp</dimen>
 
     <!--  Forms  -->
     <dimen name="primer_form_title_margin">28dp</dimen>
@@ -31,6 +31,8 @@
 
     <dimen name="medium_vertical_margin">8dp</dimen>
     <dimen name="large_vertical_margin">16dp</dimen>
+    <dimen name="xl_vertical_margin">24dp</dimen>
+    <dimen name="xxl_vertical_margin">28dp</dimen>
 
     <dimen name="elevation_selected">5dp</dimen>
     <dimen name="elevation_unselected">0dp</dimen>
