--- a/primer-sdk-android/src/main/res/layout/fragment_session_complete.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_session_complete.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/session_complete_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/success_icon_description"
@@ -20,7 +20,7 @@
         app:layout_constraintVertical_bias="0.406" />
 
     <TextView
-        android:id="@+id/success_message"
+        android:id="@+id/session_complete_message"
         style="@style/Primer.Text.Title.Small"
         android:layout_width="@dimen/success_width"
         android:layout_height="wrap_content"
@@ -29,6 +29,6 @@
         android:text="@string/success_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/session_complete_icon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
