--- a/primer-sdk-android/src/main/res/layout/payment_method_item.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_item.xml
@@ -12,16 +12,20 @@
 
     <TextView
         android:id="@+id/title_label"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="@dimen/medium_large_padding"
         android:layout_marginTop="@dimen/medium_large_padding"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="@dimen/medium_large_padding"
         android:gravity="center_vertical"
         android:textColor="@android:color/black"
         android:textIsSelectable="false"
         android:textSize="@dimen/primer_text_size_sm"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/expiry_label"
         app:layout_constraintStart_toEndOf="@+id/payment_method_icon"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/test_mail_com" />
